Add Contact Page

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -51,6 +51,12 @@
     cursor: pointer;
     transition: 0.3s ease-in;
   }
+
+  @media only screen and (max-width: 750px) {
+    .headerContainer h1 {
+      font-size: 70px;
+    }
+  }
   
   @media only screen and (max-width: 650px) {
     .home {
