--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -12,11 +12,11 @@
   }
   
   .menuList {
-    width: 70vw;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
+    margin-bottom: 150px;
   }
   
   /* MENU ITEM STYLING */
