--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -19,4 +19,12 @@
   .footer p {
     color: white;
   }
-  
+
+  @media only screen and (max-width: 700px) {
+    .footer {
+      height: 140px;
+    }
+    .socialMedia svg {
+      font-size: 40px;
+    }
+  }
