--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -83,7 +83,7 @@
   
     .navbar .rightSide {
       justify-content: flex-end;
-      padding-right: 50px;
+      margin-right: 50px;
     }
   
     .navbar .rightSide button {
